# containerd

./: .gitignore  CLAUDE.md  CORRECTED_IMPLEMENTATION.md  CRITICAL_PATH_CONFLICT_FIX.md  Cargo.toml  DEBUG_PLAN.md  FINAL_COMPREHENSIVE_FIX.md  FINAL_FIX_SUMMARY.md  FIXED_ISSUE_SUMMARY.md  HASH_BASED_SOLUTION_SUMMARY.md  Makefile  SNAPSHOT_NOT_FOUND_FIX.md  go.mod  go.sum  session-backup.sh  session-restore-hook.sh  session-restore-wrapper.sh  session-restore.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  scorecards.yml
.kiro/specs/container-image-field-fix/: design.md  requirements.md  tasks.md
docs/: corrected-session-implementation.md  design_3.md  session-backup-auto-creation.md  session-solution-complete.md  shared-snapshots-mount-options-optimization.md
docs/snapshotters/: README.md  overlayfs_shared_storage.md  overlayfs_shared_storage_zh.md
internal/cri/config/: config.go  config_unix.go
internal/cri/labels/: labels.go
internal/cri/server/: container_create.go
plugins/snapshots/overlay/: overlay.go  path_mapping.go
plugins/snapshots/overlay/plugin/: plugin.go
releases/: config.toml  config.v1.7.teco.toml  config.v2.1-short_path.toml  config.v2.1.teco-with-session-backup.toml  config.v2.1.teco.toml  config.v2.1.toml
session-manager/: Cargo.toml  README.md  SOLUTION_SUMMARY.md  build-compatible.sh
session-manager/src/: async_operations.rs  direct_restore.rs  direct_restore_enhanced.rs  lib.rs  lockless_backup.rs  optimized_io.rs  resource_manager.rs  session-backup.rs  session-restore.rs
src/: main.rs
test/: loong64.toml  post_start_hook.sh  test-mysql-shared-snapshot.yaml  test-session-backup-restore.yaml  test-shared-snapshot-pod.teco.yaml  test-shared-snapshot-pod.yaml
