[package]
name = "session-restore"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
which = "6.0"
