[package]
name = "session-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "session-backup"
path = "src/bin/session-backup.rs"

[[bin]]
name = "session-restore"
path = "src/bin/session-restore.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = "1.0"
walkdir = "2.3"
which = "6.0"