[package]
name = "session-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "session-backup"
path = "src/session-backup.rs"

[[bin]]
name = "session-restore"
path = "src/session-restore.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
which = "6.0"
filetime = "0.2"
tempfile = "3.0"
# New optimization dependencies
rayon = "1.8"
blake3 = "1.5"
lru = "0.12"
memmap2 = "0.9"
futures = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
async-stream = "0.3"
tokio-stream = "0.1"

[lib]
name = "session_manager"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.0"